mejorando diseño de las paginas

--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -1,11 +1,13 @@
 //colours
 $bc-header: #335b522d;
 $bc-footer: #335b522d;
-$bc-carousel-caption: rgba(198, 169, 163, 0.397);
+$bc-news: #c6a9a349;
 $title-color: #99bbad;
 $color-cake: #c6a9a3;
+$color-cream: #e2b7af54;
 $color-green: #99bbad;
 $color-boldgreen: #488174c4;
+$color-boldpink: #d8a196;
 $color-white: white;
 $color-txt-default: rgba(77, 52, 52, 0.541) !default;
 $bc-btn-green: #488174af;
