--- a/styles/pages/_nuestrocentro.scss
+++ b/styles/pages/_nuestrocentro.scss
@@ -1,14 +1,48 @@
-.mainCentro {
+.container-fluid-main {
+  background-color: $bc-news;
   margin-top: $margin-size-small;
   margin-bottom: $margin-size-small;
-  background: $bc-pink--light;
 
-  h4 {
-    font-size: $txt-size-m;
-    margin-top: $margin-size-normal;
-    margin-bottom: $margin-size-normal;
-    padding: $padding-size-normal;
-    font-weight: lighter;
-    text-align: left;
+  .novedades {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: baseline;
+    text-align: center;
+
+    &--campañas {
+      h2 {
+        padding: $padding-size-big;
+        font-size: $subtitle-size;
+        font-family: "Roboto", sans-serif;
+        text-decoration: dotted;
+        font-weight: bold;
+
+        .badge {
+          margin: $margin-size-normal;
+          padding: $padding-size-normal;
+        }
+      }
+    }
+
+    &--contacto {
+      h2 {
+        margin-top: $margin-size-big;
+        margin-bottom: $margin-size-small;
+        padding: $padding-size-big;
+        font-size: $txt-size-m;
+        font-family: "Roboto", sans-serif;
+      }
+    }
+  }
+
+  .carousel--container {
+    margin-top: $margin-size-small;
+    margin-bottom: $margin-size-small;
+    padding: 0px;
+
+    &--item {
+      padding: 0px;
+    }
   }
 }
