--- a/styles/pages/_footer.scss
+++ b/styles/pages/_footer.scss
@@ -1,9 +1,10 @@
 .footer {
+  @include margpad(0, 0);
   background-color: $bc-footer;
   margin-top: $margin-size-small;
-  padding: 0px;
 
   .footerRow {
+    @include margpad(0, 0);
     flex-flow: row wrap;
     justify-content: center;
     align-items: baseline;
