--- a/styles/pages/_index.scss
+++ b/styles/pages/_index.scss
@@ -1,49 +1,59 @@
 .mainIndex {
-  margin-top: $margin-size-small;
+  @include margpad(0, 0);
   width: 100%;
-  padding: 0px;
+  height: auto;
+  margin-top: $margin-size-small;
+  margin-bottom: $margin-size-small;
 
   .bgimageIndex {
+    @include margpad(0, 0);
     background-image: url("../../img/oftalmologo2.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    margin: 0px;
     width: 100%;
     height: 600px;
 
     .welcome {
-      height: max-content;
-      width: max-content;
-    }
+      h5 {
+        color: $color-cake;
+        font-size: $title-size;
+        text-align: left;
+        margin: $margin-size-normal;
+      }
 
-    h5 {
-      color: $color-cake;
-      font-size: $title-size;
-      text-align: left;
-      margin: $margin-size-normal;
-      padding: 0px;
-    }
-
-    p {
-      color: $color-txt-default;
-      font-size: $txt-size-m;
-      text-align: left;
-      margin: $margin-size-normal;
+      p {
+        color: $color-txt-default;
+        font-size: $txt-size-m;
+        text-align: left;
+        margin: $margin-size-normal;
+      }
     }
   }
 
-  .btn {
-    border: none;
-    text-align: center;
-    width: 100%;
-    margin-top: $margin-size-small;
-    font-size: $txt-btn-size-l;
-    background-color: $color-cake;
-    color: $txt-btn-color;
+  &--turno {
+    @include margpad(0, 0);
+    &--btn {
+      @include margpad(0, 0);
+
+      .btn-main {
+        border: none;
+        text-align: center;
+        margin-top: $margin-size-small;
+        font-size: $txt-btn-size-l;
+        background-color: $color-cake;
+        color: $txt-btn-color;
+
+        img {
+          width: auto;
+        }
+      }
+    }
   }
 
   .ppage {
+    width: 100%;
+    @include margpad(0, 0);
     align-items: space-evenly;
     text-align: center;
 
@@ -61,7 +71,8 @@
   }
 
   .bpageIndex {
-    margin: 0px;
+    width: 100%;
+    @include margpad(0, 0);
     background: $bc-cream;
 
     .container-form {
@@ -70,6 +81,17 @@
       .legend-form {
         text-align: center;
         color: $color-txt-default;
+      }
+
+      .btn-formulario {
+        color: $txt-btn-color;
+        background-color: $color-cake;
+        font-size: $txt-btn-size-s;
+        text-decoration: none;
+        cursor: pointer;
+        width: auto;
+        border: 2px;
+        border-radius: 5px;
       }
     }
   }
