--- a/styles/pages/main.css
+++ b/styles/pages/main.css
@@ -1,10 +1,13 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
 * {
+  width: 100%;
   margin: 0px;
   padding: 0px; }
 
 .header {
+  margin: 0;
+  padding: 0;
   width: 100%;
   background-color: #335b522d; }
   .header .navbar .navbar-brand {
@@ -21,10 +24,13 @@
     margin: 20px; }
 
 .footer {
+  margin: 0;
+  padding: 0;
   background-color: #335b522d;
-  margin-top: 5px;
-  padding: 0px; }
+  margin-top: 5px; }
   .footer .footerRow {
+    margin: 0;
+    padding: 0;
     flex-flow: row wrap;
     justify-content: center;
     align-items: baseline; }
@@ -65,40 +71,50 @@
           height: 40px; }
 
 .mainIndex {
-  margin-top: 5px;
+  margin: 0;
+  padding: 0;
   width: 100%;
-  padding: 0px; }
+  height: auto;
+  margin-top: 5px;
+  margin-bottom: 5px; }
   .mainIndex .bgimageIndex {
+    margin: 0;
+    padding: 0;
     background-image: url("../../img/oftalmologo2.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    margin: 0px;
     width: 100%;
     height: 600px; }
-    .mainIndex .bgimageIndex .welcome {
-      height: max-content;
-      width: max-content; }
-    .mainIndex .bgimageIndex h5 {
+    .mainIndex .bgimageIndex .welcome h5 {
       color: #c6a9a3;
       font-size: 2.5rem;
       text-align: left;
-      margin: 10px;
-      padding: 0px; }
-    .mainIndex .bgimageIndex p {
+      margin: 10px; }
+    .mainIndex .bgimageIndex .welcome p {
       color: rgba(77, 52, 52, 0.541);
       font-size: 1.5rem;
       text-align: left;
       margin: 10px; }
-  .mainIndex .btn {
-    border: none;
-    text-align: center;
-    width: 100%;
-    margin-top: 5px;
-    font-size: 2rem;
-    background-color: #c6a9a3;
-    color: white; }
+  .mainIndex--turno {
+    margin: 0;
+    padding: 0; }
+    .mainIndex--turno--btn {
+      margin: 0;
+      padding: 0; }
+      .mainIndex--turno--btn .btn-main {
+        border: none;
+        text-align: center;
+        margin-top: 5px;
+        font-size: 2rem;
+        background-color: #c6a9a3;
+        color: white; }
+        .mainIndex--turno--btn .btn-main img {
+          width: auto; }
   .mainIndex .ppage {
+    width: 100%;
+    margin: 0;
+    padding: 0;
     align-items: space-evenly;
     text-align: center; }
     .mainIndex .ppage--item h2 {
@@ -108,19 +124,34 @@
     .mainIndex .ppage--item p {
       font-size: 1rem; }
   .mainIndex .bpageIndex {
-    margin: 0px;
+    width: 100%;
+    margin: 0;
+    padding: 0;
     background: linear-gradient(90deg, white 0%, rgba(235, 216, 183, 0.179709) 27%); }
     .mainIndex .bpageIndex .container-form {
       width: 50%; }
       .mainIndex .bpageIndex .container-form .legend-form {
         text-align: center;
         color: rgba(77, 52, 52, 0.541); }
+      .mainIndex .bpageIndex .container-form .btn-formulario {
+        color: white;
+        background-color: #c6a9a3;
+        font-size: 1rem;
+        text-decoration: none;
+        cursor: pointer;
+        width: auto;
+        border: 2px;
+        border-radius: 5px; }
 
 .container-fluid-main {
+  margin: 0;
+  padding: 0;
   background-color: #c6a9a349;
   margin-top: 5px;
   margin-bottom: 5px; }
   .container-fluid-main .novedades {
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
@@ -133,6 +164,7 @@
       text-decoration: dotted;
       font-weight: bold; }
       .container-fluid-main .novedades--campañas h2 .badge {
+        width: 30%;
         margin: 10px;
         padding: 10px; }
     .container-fluid-main .novedades--contacto h2 {
@@ -142,88 +174,113 @@
       font-size: 1.5rem;
       font-family: "Roboto", sans-serif; }
   .container-fluid-main .carousel--container {
-    margin-top: 5px;
-    margin-bottom: 5px;
-    padding: 0px; }
-    .container-fluid-main .carousel--container--item {
-      padding: 0px; }
-
-.mainEspecialidad {
-  background-color: #c6a9a349;
-  margin: 0px;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  padding: 0px;
-  width: 100%; }
-  .mainEspecialidad .especialidad {
-    width: 100%;
-    margin: 0px; }
-    .mainEspecialidad .especialidad h2 {
-      margin-top: 20px;
-      margin-bottom: 5px;
-      color: #99bbad;
-      font-size: 2rem;
-      text-align: center; }
-    .mainEspecialidad .especialidad h3 {
-      font-size: 1rem;
-      font-weight: bolder;
-      text-align: center; }
-    .mainEspecialidad .especialidad h4 {
-      font-size: 1rem;
-      font-weight: bolder;
-      text-align: center;
-      margin: 10px; }
-    .mainEspecialidad .especialidad h5 {
-      margin: 10px;
-      font-size: 1rem;
-      font-weight: bolder;
-      text-align: center; }
-      .mainEspecialidad .especialidad h5 a {
-        text-decoration: none;
-        color: #488174c4;
-        margin: 10px; }
-    .mainEspecialidad .especialidad img {
-      width: 150px;
-      margin: 10px; }
-    .mainEspecialidad .especialidad img:hover {
-      transform: scale(2); }
-
-.mainEstudio {
-  width: 100%;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  background: linear-gradient(90deg, white 0%, rgba(235, 216, 183, 0.179709) 27%); }
-  .mainEstudio--items {
-    align-items: center;
-    justify-content: center;
+    margin: 0;
+    padding: 0;
     margin-top: 5px;
     margin-bottom: 5px; }
-    .mainEstudio--items .btn-turno {
-      border: none;
-      text-align: center;
-      font-size: 1rem;
-      background-color: #c6a9a3;
-      color: white; }
-    .mainEstudio--items-lista {
-      list-style: none;
-      font-size: 1.5rem; }
+    .container-fluid-main .carousel--container--item {
+      margin: 0;
+      padding: 0; }
 
-.banner {
+.mainEspecialidad {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  background: linear-gradient(90deg, white 0%, rgba(235, 216, 183, 0.179709) 27%);
+  margin-top: 5px;
   margin-bottom: 5px; }
+  .mainEspecialidad .especialidad h2 {
+    margin-top: 20px;
+    margin-bottom: 5px;
+    color: #99bbad;
+    font-size: 2rem;
+    text-align: center; }
+  .mainEspecialidad .especialidad h3 {
+    font-size: 1rem;
+    font-weight: bolder;
+    text-align: center; }
+  .mainEspecialidad .especialidad h4 {
+    font-size: 1rem;
+    font-weight: bolder;
+    text-align: center;
+    margin: 10px; }
+  .mainEspecialidad .especialidad h5 {
+    margin: 10px;
+    font-size: 1rem;
+    font-weight: bolder;
+    text-align: center; }
+    .mainEspecialidad .especialidad h5 a {
+      text-decoration: none;
+      color: #c6a9a3;
+      margin: 10px; }
+  .mainEspecialidad .especialidad img {
+    width: 150px;
+    margin: 10px; }
+  .mainEspecialidad .especialidad img:hover {
+    transform: scale(2); }
 
-.mainCirugia {
+.mainEstudio {
+  margin: 0;
+  padding: 0;
   width: 100%;
   height: auto;
   margin-top: 5px;
+  margin-bottom: 5px;
+  background: linear-gradient(90deg, white 0%, rgba(235, 216, 183, 0.179709) 27%); }
+  .mainEstudio .section1Estudio {
+    margin: 0;
+    padding: 0; }
+    .mainEstudio .section1Estudio--estudio {
+      margin: 0px;
+      padding: 0px;
+      margin-top: 5px;
+      margin-bottom: 5px; }
+      .mainEstudio .section1Estudio--estudio h2 {
+        color: #99bbad;
+        font-size: 2rem;
+        text-align: center;
+        margin-top: 20px;
+        margin-bottom: 20px; }
+      .mainEstudio .section1Estudio--estudio ul {
+        margin: 0px;
+        padding: 0px; }
+      .mainEstudio .section1Estudio--estudio li {
+        margin-top: 20px;
+        margin-bottom: 20px;
+        list-style: none;
+        text-align: center;
+        font-size: 1.5rem; }
+
+.bannerEstudios {
+  height: 60vh;
+  background-image: url("../../img/slide1.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: left;
+  margin-top: 5px;
   margin-bottom: 5px; }
-  .mainCirugia .section1Cirugia--cirugia h2 {
-    color: #488174c4;
-    font-size: 1.5rem;
-    text-align: center; }
-  .mainCirugia .section1Cirugia--cirugia li {
-    list-style: none;
-    text-align: left;
-    font-size: 1rem; }
+
+.mainCirugia {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: auto;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  background: linear-gradient(90deg, white 0%, rgba(235, 216, 183, 0.179709) 27%); }
+  .mainCirugia .section1Cirugia {
+    margin: 0;
+    padding: 0; }
+    .mainCirugia .section1Cirugia--cirugia h2 {
+      color: #99bbad;
+      font-size: 1.5rem;
+      text-align: center;
+      margin-top: 5px;
+      margin-bottom: 5px; }
+    .mainCirugia .section1Cirugia--cirugia li {
+      list-style: none;
+      text-align: left;
+      font-size: 1rem; }
 
 .bannerCirugia {
   height: 60vh;
@@ -235,14 +292,19 @@
   margin-bottom: 5px; }
 
 .mainPortal {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100vh;
   background-image: url("/img/img_3.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom;
-  height: 100vh;
   margin-top: 5px;
   margin-bottom: 5px; }
   .mainPortal .section1 {
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
