--- a/styles/pages/_estudios.scss
+++ b/styles/pages/_estudios.scss
@@ -32,7 +32,7 @@
         margin-bottom: $margin-size-big;
         list-style: none;
         text-align: center;
-        font-size: $txt-size-m;
+        font-size: $txt-size-s;
       }
     }
   }
