--- a/styles/pages/main.css
+++ b/styles/pages/main.css
@@ -15,13 +15,14 @@
     .header .navbar .navbar-brand .logo-brand {
       margin: 20px;
       width: 220px;
-      height: 60px; }
+      height: 70px; }
   .header .navbar .navbar-toggler {
     margin: 20px; }
   .header .navbar .nav-item {
+    margin: 0;
+    padding: 0;
     text-align: center;
-    font-size: 1.5rem;
-    margin: 20px; }
+    font-size: 1.5rem; }
 
 .footer {
   margin: 0;
@@ -44,7 +45,7 @@
         margin: 10px;
         padding: 5px;
         width: 200px;
-        height: 60px; }
+        height: 70px; }
     .footer .footerRow .footer-copywrite {
       margin-top: 5px;
       margin-bottom: 5px;
@@ -164,7 +165,7 @@
       text-decoration: dotted;
       font-weight: bold; }
       .container-fluid-main .novedades--campañas h2 .badge {
-        width: 30%;
+        width: 100%;
         margin: 10px;
         padding: 10px; }
     .container-fluid-main .novedades--contacto h2 {
@@ -189,35 +190,41 @@
   background: linear-gradient(90deg, white 0%, rgba(235, 216, 183, 0.179709) 27%);
   margin-top: 5px;
   margin-bottom: 5px; }
-  .mainEspecialidad .especialidad h2 {
-    margin-top: 20px;
-    margin-bottom: 5px;
-    color: #99bbad;
-    font-size: 2rem;
-    text-align: center; }
-  .mainEspecialidad .especialidad h3 {
-    font-size: 1rem;
-    font-weight: bolder;
-    text-align: center; }
-  .mainEspecialidad .especialidad h4 {
-    font-size: 1rem;
-    font-weight: bolder;
+  .mainEspecialidad .especialidad {
+    margin: 0;
+    padding: 0;
     text-align: center;
-    margin: 10px; }
-  .mainEspecialidad .especialidad h5 {
-    margin: 10px;
-    font-size: 1rem;
-    font-weight: bolder;
-    text-align: center; }
-    .mainEspecialidad .especialidad h5 a {
-      text-decoration: none;
-      color: #c6a9a3;
+    width: 100%; }
+    .mainEspecialidad .especialidad h2 {
+      margin: 0;
+      padding: 0;
+      margin-top: 20px;
+      margin-bottom: 5px;
+      color: #99bbad;
+      font-size: 2rem;
+      text-align: center; }
+    .mainEspecialidad .especialidad h3 {
+      font-size: 1rem;
+      font-weight: bolder;
+      text-align: center; }
+    .mainEspecialidad .especialidad h4 {
+      font-size: 1rem;
+      font-weight: bolder;
+      text-align: center;
       margin: 10px; }
-  .mainEspecialidad .especialidad img {
-    width: 150px;
-    margin: 10px; }
-  .mainEspecialidad .especialidad img:hover {
-    transform: scale(2); }
+    .mainEspecialidad .especialidad h5 {
+      font-size: 1rem;
+      font-weight: bolder;
+      text-align: center; }
+      .mainEspecialidad .especialidad h5 a {
+        text-decoration: none;
+        color: #c6a9a3;
+        margin: 10px; }
+    .mainEspecialidad .especialidad img {
+      width: 150px;
+      margin: 10px; }
+    .mainEspecialidad .especialidad img:hover {
+      transform: scale(2); }
 
 .mainEstudio {
   margin: 0;
@@ -249,7 +256,7 @@
         margin-bottom: 20px;
         list-style: none;
         text-align: center;
-        font-size: 1.5rem; }
+        font-size: 1rem; }
 
 .bannerEstudios {
   height: 60vh;
@@ -271,16 +278,22 @@
   .mainCirugia .section1Cirugia {
     margin: 0;
     padding: 0; }
-    .mainCirugia .section1Cirugia--cirugia h2 {
-      color: #99bbad;
-      font-size: 1.5rem;
-      text-align: center;
+    .mainCirugia .section1Cirugia--cirugia {
       margin-top: 5px;
       margin-bottom: 5px; }
-    .mainCirugia .section1Cirugia--cirugia li {
-      list-style: none;
-      text-align: left;
-      font-size: 1rem; }
+      .mainCirugia .section1Cirugia--cirugia h2 {
+        color: #99bbad;
+        font-size: 1.5rem;
+        text-align: left;
+        margin-top: 5px;
+        margin-bottom: 5px; }
+      .mainCirugia .section1Cirugia--cirugia ul {
+        margin: 0;
+        padding: 0; }
+        .mainCirugia .section1Cirugia--cirugia ul li {
+          list-style: none;
+          text-align: left;
+          font-size: 1rem; }
 
 .bannerCirugia {
   height: 60vh;
