--- a/styles/pages/main.css
+++ b/styles/pages/main.css
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
 * {
   width: 100%;
   margin: 0px;
@@ -309,7 +308,7 @@
   padding: 0;
   width: 100%;
   height: 100vh;
-  background-image: url("/img/img_3.jpg");
+  background-image: url("../../img/img_3.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom;
