--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -31,6 +31,7 @@ $subtitle-size: ($title-size - 0.5);
 $nav-item-size: ($title-size - 1);
 $txt-btn-size-l: ($title-size - 0.5);
 $txt-btn-size-s: ($title-size - 1.5);
+$txt-btn-size-m: ($title-size - 1);
 $txt-size-m: ($title-size - 1);
 $txt-size-s: ($title-size - 1.5);
 $txt-size-xs: ($title-size - 1.8);
