--- a/styles/pages/_portal.scss
+++ b/styles/pages/_portal.scss
@@ -2,46 +2,40 @@
   @include margpad(0, 0);
   width: 100%;
   height: 100vh;
-  background-image: url("../../img/img_3.jpg");
+  background-image: url("/img/oftalmologo.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom;
-
   margin-top: $margin-size-small;
   margin-bottom: $margin-size-small;
 
-  .section1 {
+  .form--container {
     @include margpad(0, 0);
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    margin-top: ($margin-size-big * 2)+10;
+    margin: $margin-size-big;
+    padding: $padding-size-normal;
+    border: 2px;
+    border-radius: $margin-size-small;
 
-    .form--container {
-      margin: $margin-size-big;
-      padding: $padding-size-normal;
-      border: 2px;
-      border-radius: $margin-size-small;
-      background: $bc-green;
+    .formulario {
+      input {
+        background-color: rgba(240, 248, 255, 0.253);
+      }
+      .btn-primary {
+        color: $txt-btn-color;
+        background-color: $bc-btn-green;
+        font-size: $txt-btn-size-m;
+        text-decoration: none;
+        cursor: pointer;
+        width: auto;
+        border: 2px;
+        border-radius: 5px;
+      }
 
-      .formulario {
-        .btn-primary {
-          color: $txt-btn-color;
-          background-color: $bc-btn-green;
-          font-size: $txt-btn-size-s;
+      .forgetPass {
+        margin-top: $margin-size-normal;
+        h3 {
+          font-size: $txt-size-s;
           text-decoration: none;
-          cursor: pointer;
-          width: auto;
-          border: 2px;
-          border-radius: 5px;
-        }
-
-        .forgetPass {
-          margin: $margin-size-normal;
-          h3 {
-            font-size: $txt-size-s;
-            text-decoration: none;
-          }
         }
       }
     }
