--- a/styles/pages/main.css
+++ b/styles/pages/main.css
@@ -308,36 +308,32 @@
   padding: 0;
   width: 100%;
   height: 100vh;
-  background-image: url("../../img/img_3.jpg");
+  background-image: url("/img/oftalmologo.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom;
   margin-top: 5px;
   margin-bottom: 5px; }
-  .mainPortal .section1 {
+  .mainPortal .form--container {
     margin: 0;
     padding: 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    margin-top: 50px; }
-    .mainPortal .section1 .form--container {
-      margin: 20px;
-      padding: 10px;
+    margin: 20px;
+    padding: 10px;
+    border: 2px;
+    border-radius: 5px; }
+    .mainPortal .form--container .formulario input {
+      background-color: rgba(240, 248, 255, 0.253); }
+    .mainPortal .form--container .formulario .btn-primary {
+      color: white;
+      background-color: #488174af;
+      font-size: 1.5rem;
+      text-decoration: none;
+      cursor: pointer;
+      width: auto;
       border: 2px;
-      border-radius: 5px;
-      background: linear-gradient(90deg, white 0%, rgba(51, 91, 82, 0.13209) 100%); }
-      .mainPortal .section1 .form--container .formulario .btn-primary {
-        color: white;
-        background-color: #488174af;
+      border-radius: 5px; }
+    .mainPortal .form--container .formulario .forgetPass {
+      margin-top: 10px; }
+      .mainPortal .form--container .formulario .forgetPass h3 {
         font-size: 1rem;
-        text-decoration: none;
-        cursor: pointer;
-        width: auto;
-        border: 2px;
-        border-radius: 5px; }
-      .mainPortal .section1 .form--container .formulario .forgetPass {
-        margin: 10px; }
-        .mainPortal .section1 .form--container .formulario .forgetPass h3 {
-          font-size: 1rem;
-          text-decoration: none; }
+        text-decoration: none; }
