--- a/styles/pages/main.css
+++ b/styles/pages/main.css
@@ -308,7 +308,7 @@
   padding: 0;
   width: 100%;
   height: 100vh;
-  background-image: url("/img/oftalmologo.jpg");
+  background-image: url("../../img/oftalmologo2.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom;
