cambio imagen y formato de form en portal

--- a/styles/pages/_portal.scss
+++ b/styles/pages/_portal.scss
@@ -2,7 +2,7 @@
   @include margpad(0, 0);
   width: 100%;
   height: 100vh;
-  background-image: url("../img/oftalmologo2.jpg");
+  background-image: url("../../img/oftalmologo2.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom;
