--- a/styles/pages/_portal.scss
+++ b/styles/pages/_portal.scss
@@ -17,9 +17,10 @@
     border-radius: $margin-size-small;
 
     .formulario {
-      input {
+      .form-control {
         background-color: rgba(240, 248, 255, 0.253);
       }
+
       .btn-primary {
         color: $txt-btn-color;
         background-color: $bc-btn-green;
