--- a/styles/pages/main.css
+++ b/styles/pages/main.css
@@ -321,7 +321,7 @@
     padding: 10px;
     border: 2px;
     border-radius: 5px; }
-    .mainPortal .form--container .formulario input {
+    .mainPortal .form--container .formulario .form-control {
       background-color: rgba(240, 248, 255, 0.253); }
     .mainPortal .form--container .formulario .btn-primary {
       color: white;
