--- a/styles/pages/main.css
+++ b/styles/pages/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   width: 100%;
   margin: 0px;
@@ -150,37 +149,21 @@
   margin-top: 5px;
   margin-bottom: 5px; }
   .container-fluid-main .novedades {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    align-items: baseline;
-    text-align: center; }
-    .container-fluid-main .novedades--campañas h2 {
-      padding: 20px;
-      font-size: 2rem;
-      font-family: "Roboto", sans-serif;
-      text-decoration: dotted;
-      font-weight: bold; }
-      .container-fluid-main .novedades--campañas h2 .badge {
-        width: 100%;
-        margin: 10px;
-        padding: 10px; }
-    .container-fluid-main .novedades--contacto h2 {
-      margin-top: 20px;
-      margin-bottom: 5px;
-      padding: 20px;
-      font-size: 1.5rem;
-      font-family: "Roboto", sans-serif; }
-  .container-fluid-main .carousel--container {
-    margin: 0;
-    padding: 0;
     margin-top: 5px;
     margin-bottom: 5px; }
-    .container-fluid-main .carousel--container--item {
-      margin: 0;
-      padding: 0; }
+    .container-fluid-main .novedades h2 {
+      padding: 20px;
+      font-size: 1rem;
+      text-align: center; }
+
+.carousel--container {
+  margin: 0;
+  padding: 0;
+  margin-top: 5px;
+  margin-bottom: 5px; }
+  .carousel--container--item {
+    margin: 0;
+    padding: 0; }
 
 .mainEspecialidad {
   width: 100%;
