--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -14,13 +14,11 @@ $bc-btn-cake: #c6a9a38e;
 $txt-btn-color: white;
 
 //margins
-$margin-default: 0px;
 $margin-size-normal: 10px;
 $margin-size-big: ($margin-size-normal * 2);
 $margin-size-small: ($margin-size-normal / 2);
 
 //paddings
-$padding-default: 0px;
 $padding-size-normal: 10px;
 $padding-size-big: ($padding-size-normal * 2);
 $padding-size-small: ($padding-size-normal / 2);
@@ -56,4 +54,9 @@ $bc-pink--light: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, #c6a9a349);
 @mixin margpad($margin-default, $padding-default) {
   margin: $margin-default;
   padding: $padding-default;
+}
+
+@mixin dimension($width, $height) {
+  width: $width;
+  height: $height;
 }
