--- a/styles/pages/_portal.scss
+++ b/styles/pages/_portal.scss
@@ -1,7 +1,6 @@
 .mainPortal {
   @include margpad(0, 0);
-  width: 100%;
-  height: 100vh;
+  @include dimension(100%, 100vh);
   background-image: url("../../img/oftalmologo2.jpg");
   background-size: cover;
   background-repeat: no-repeat;
