--- a/styles/pages/main.css
+++ b/styles/pages/main.css
@@ -7,13 +7,14 @@
   margin: 0;
   padding: 0;
   width: 100%;
+  height: auto;
   background-color: #335b522d; }
   .header .navbar .navbar-brand {
     width: max-content; }
     .header .navbar .navbar-brand .logo-brand {
-      margin: 20px;
       width: 220px;
-      height: 70px; }
+      height: 70px;
+      margin: 20px; }
   .header .navbar .navbar-toggler {
     margin: 20px; }
   .header .navbar .nav-item {
@@ -42,7 +43,7 @@
       .footer .footerRow .footer-brand .logo-brand {
         margin: 10px;
         padding: 5px;
-        width: 200px;
+        width: 220px;
         height: 70px; }
     .footer .footerRow .footer-copywrite {
       margin-top: 5px;
@@ -79,12 +80,12 @@
   .mainIndex .bgimageIndex {
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 600px;
     background-image: url("../../img/oftalmologo2.jpg");
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
-    width: 100%;
-    height: 600px; }
+    background-size: cover; }
     .mainIndex .bgimageIndex .welcome h5 {
       color: #c6a9a3;
       font-size: 2.5rem;
@@ -112,6 +113,7 @@
           width: auto; }
   .mainIndex .ppage {
     width: 100%;
+    height: auto;
     margin: 0;
     padding: 0;
     align-items: space-evenly;
@@ -124,11 +126,13 @@
       font-size: 1rem; }
   .mainIndex .bpageIndex {
     width: 100%;
+    height: auto;
     margin: 0;
     padding: 0;
     background: linear-gradient(90deg, white 0%, rgba(235, 216, 183, 0.179709) 27%); }
     .mainIndex .bpageIndex .container-form {
-      width: 50%; }
+      width: 50%;
+      height: auto; }
       .mainIndex .bpageIndex .container-form .legend-form {
         text-align: center;
         color: rgba(77, 52, 52, 0.541); }
@@ -167,8 +171,9 @@
   .mainEspecialidad .especialidad {
     margin: 0;
     padding: 0;
-    text-align: center;
-    width: 100%; }
+    width: 100%;
+    height: auto;
+    text-align: center; }
     .mainEspecialidad .especialidad h2 {
       margin: 0;
       padding: 0;
@@ -196,6 +201,7 @@
         margin: 10px; }
     .mainEspecialidad .especialidad img {
       width: 150px;
+      height: auto;
       margin: 10px; }
     .mainEspecialidad .especialidad img:hover {
       transform: scale(2); }
@@ -212,8 +218,8 @@
     margin: 0;
     padding: 0; }
     .mainEstudio .section1Estudio--estudio {
-      margin: 0px;
-      padding: 0px;
+      margin: 0;
+      padding: 0;
       margin-top: 5px;
       margin-bottom: 5px; }
       .mainEstudio .section1Estudio--estudio h2 {
@@ -223,8 +229,8 @@
         margin-top: 20px;
         margin-bottom: 20px; }
       .mainEstudio .section1Estudio--estudio ul {
-        margin: 0px;
-        padding: 0px; }
+        margin: 0;
+        padding: 0; }
       .mainEstudio .section1Estudio--estudio li {
         margin-top: 20px;
         margin-bottom: 20px;
@@ -233,6 +239,7 @@
         font-size: 1rem; }
 
 .bannerEstudios {
+  width: 100%;
   height: 60vh;
   background-image: url("../../img/slide1.jpg");
   background-size: cover;
@@ -269,6 +276,7 @@
         font-size: 1rem; }
 
 .bannerCirugia {
+  width: 100%;
   height: 60vh;
   background-image: url("../../img/quirofano.jpg");
   background-size: cover;
