arreglos finales de diseño para entrega del proyecto

--- a/styles/pages/_header.scss
+++ b/styles/pages/_header.scss
@@ -4,6 +4,9 @@
   background-color: $bc-header;
 
   .navbar {
+    .navbar-toggler {
+      background-color: $bc-header;
+    }
     .navbar-brand {
       width: max-content;
 
