--- a/styles/pages/main.css
+++ b/styles/pages/main.css
@@ -9,6 +9,8 @@
   width: 100%;
   height: auto;
   background-color: #335b522d; }
+  .header .navbar .navbar-toggler {
+    background-color: #335b522d; }
   .header .navbar .navbar-brand {
     width: max-content; }
     .header .navbar .navbar-brand .logo-brand {
@@ -149,7 +151,7 @@
 .container-fluid-main {
   margin: 0;
   padding: 0;
-  background-color: #c6a9a349;
+  background: linear-gradient(90deg, white 0%, rgba(235, 216, 183, 0.179709) 27%);
   margin-top: 5px;
   margin-bottom: 5px; }
   .container-fluid-main .carousel--container {
@@ -160,6 +162,28 @@
     .container-fluid-main .carousel--container--item {
       margin: 0;
       padding: 0; }
+      .container-fluid-main .carousel--container--item .carousel-inner {
+        height: 60vh; }
+        .container-fluid-main .carousel--container--item .carousel-inner .carousel-item {
+          height: 60vh; }
+          .container-fluid-main .carousel--container--item .carousel-inner .carousel-item img {
+            height: 60vh; }
+  .container-fluid-main .card--container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: baseline; }
+    .container-fluid-main .card--container .card {
+      background-color: rgba(255, 255, 255, 0);
+      border: none; }
+      .container-fluid-main .card--container .card .card-body {
+        text-align: center; }
+        .container-fluid-main .card--container .card .card-body .card-title {
+          color: #99bbad;
+          font-size: 2rem; }
+        .container-fluid-main .card--container .card .card-body .card-link {
+          text-decoration: none;
+          cursor: pointer;
+          color: rgba(77, 52, 52, 0.541); }
 
 .mainEspecialidad {
   width: 100%;
