--- a/styles/pages/_portal.scss
+++ b/styles/pages/_portal.scss
@@ -22,7 +22,7 @@
 
       .btn-primary {
         color: $txt-btn-color;
-        background-color: $bc-btn-green;
+        background-color: $bc-btn-cake;
         font-size: $txt-btn-size-m;
         text-decoration: none;
         cursor: pointer;
