--- a/styles/pages/_cirugias.scss
+++ b/styles/pages/_cirugias.scss
@@ -7,15 +7,18 @@
 
   .section1Cirugia {
     @include margpad(0, 0);
+
     &--cirugia {
+      margin-top: $margin-size-small;
+      margin-bottom: $margin-size-small;
+
       h2 {
+        color: $color-green;
         margin-top: $margin-size-small;
         margin-bottom: $margin-size-small;
         color: $color-green;
         font-size: $txt-size-m;
         text-align: left;
-        margin-top: $margin-size-small;
-        margin-bottom: $margin-size-small;
       }
 
       ul {
