--- a/styles/pages/main.css
+++ b/styles/pages/main.css
@@ -163,11 +163,20 @@
       margin: 0;
       padding: 0; }
       .container-fluid-main .carousel--container--item .carousel-inner {
-        height: 60vh; }
+        height: 100vh; }
+        @media only screen and (max-width: 770px) {
+          .container-fluid-main .carousel--container--item .carousel-inner {
+            height: 40vh; } }
         .container-fluid-main .carousel--container--item .carousel-inner .carousel-item {
-          height: 60vh; }
+          height: 100vh; }
+          @media only screen and (max-width: 770px) {
+            .container-fluid-main .carousel--container--item .carousel-inner .carousel-item {
+              height: 40vh; } }
           .container-fluid-main .carousel--container--item .carousel-inner .carousel-item img {
-            height: 60vh; }
+            height: 100vh; }
+            @media only screen and (max-width: 770px) {
+              .container-fluid-main .carousel--container--item .carousel-inner .carousel-item img {
+                height: 40vh; } }
   .container-fluid-main .card--container {
     display: flex;
     justify-content: space-evenly;
@@ -198,37 +207,43 @@
     width: 100%;
     height: auto;
     text-align: center; }
+    .mainEspecialidad .especialidad--item--container {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-evenly; }
+      .mainEspecialidad .especialidad--item--container div {
+        width: auto; }
+        .mainEspecialidad .especialidad--item--container div h3 {
+          font-size: 1rem;
+          font-weight: bolder;
+          text-align: center; }
+        .mainEspecialidad .especialidad--item--container div h4 {
+          font-size: 1rem;
+          font-weight: bolder;
+          text-align: center;
+          margin: 10px; }
+        .mainEspecialidad .especialidad--item--container div h5 {
+          font-size: 1rem;
+          font-weight: bolder;
+          text-align: center; }
+          .mainEspecialidad .especialidad--item--container div h5 a {
+            text-decoration: none;
+            color: #c6a9a3;
+            margin: 10px; }
+        .mainEspecialidad .especialidad--item--container div img {
+          width: 150px;
+          height: auto;
+          margin: 10px; }
+        .mainEspecialidad .especialidad--item--container div img:hover {
+          transform: scale(2); }
     .mainEspecialidad .especialidad h2 {
-      margin: 0;
-      padding: 0;
       margin-top: 20px;
-      margin-bottom: 5px;
+      margin-bottom: 20px;
+      padding: 0;
       color: #99bbad;
       font-size: 2rem;
       text-align: center; }
-    .mainEspecialidad .especialidad h3 {
-      font-size: 1rem;
-      font-weight: bolder;
-      text-align: center; }
-    .mainEspecialidad .especialidad h4 {
-      font-size: 1rem;
-      font-weight: bolder;
-      text-align: center;
-      margin: 10px; }
-    .mainEspecialidad .especialidad h5 {
-      font-size: 1rem;
-      font-weight: bolder;
-      text-align: center; }
-      .mainEspecialidad .especialidad h5 a {
-        text-decoration: none;
-        color: #c6a9a3;
-        margin: 10px; }
-    .mainEspecialidad .especialidad img {
-      width: 150px;
-      height: auto;
-      margin: 10px; }
-    .mainEspecialidad .especialidad img:hover {
-      transform: scale(2); }
 
 .mainEstudio {
   margin: 0;
@@ -264,7 +279,7 @@
 
 .bannerEstudios {
   width: 100%;
-  height: 60vh;
+  height: 40vh;
   background-image: url("../../img/slide1.jpg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -283,21 +298,23 @@
   .mainCirugia .section1Cirugia {
     margin: 0;
     padding: 0; }
-    .mainCirugia .section1Cirugia--cirugia h2 {
-      margin-top: 5px;
-      margin-bottom: 5px;
-      color: #99bbad;
-      font-size: 1.5rem;
-      text-align: left;
+    .mainCirugia .section1Cirugia--cirugia {
       margin-top: 5px;
       margin-bottom: 5px; }
-    .mainCirugia .section1Cirugia--cirugia ul {
-      margin: 0;
-      padding: 0; }
-      .mainCirugia .section1Cirugia--cirugia ul li {
-        list-style: none;
-        text-align: left;
-        font-size: 1rem; }
+      .mainCirugia .section1Cirugia--cirugia h2 {
+        color: #99bbad;
+        margin-top: 5px;
+        margin-bottom: 5px;
+        color: #99bbad;
+        font-size: 1.5rem;
+        text-align: left; }
+      .mainCirugia .section1Cirugia--cirugia ul {
+        margin: 0;
+        padding: 0; }
+        .mainCirugia .section1Cirugia--cirugia ul li {
+          list-style: none;
+          text-align: left;
+          font-size: 1rem; }
 
 .bannerCirugia {
   width: 100%;
@@ -331,7 +348,7 @@
       background-color: rgba(240, 248, 255, 0.253); }
     .mainPortal .form--container .formulario .btn-primary {
       color: white;
-      background-color: #488174af;
+      background-color: #c6a9a38e;
       font-size: 1.5rem;
       text-decoration: none;
       cursor: pointer;
