--- a/styles/pages/_nuestrocentro.scss
+++ b/styles/pages/_nuestrocentro.scss
@@ -42,9 +42,9 @@
     justify-content: space-evenly;
     align-items: baseline;
 
-    .card {
-      background-color: rgba(255, 255, 255, 0);
+    .card--container--card {
       border: none;
+      background-color: $bc-cream;
 
       .card-body {
         text-align: center;
