arreglos finales de diseño para entrega del proyecto

--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -8,7 +8,7 @@ $color-green: #99bbad;
 $color-boldgreen: #488174c4;
 $color-boldpink: #d8a196;
 $color-white: white;
-$color-txt-default: rgba(77, 52, 52, 0.541) !default;
+$color-txt-default: rgba(77, 52, 52, 0.541);
 $bc-btn-green: #488174af;
 $bc-btn-cake: #c6a9a38e;
 $txt-btn-color: white;
